# complex-bessel

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml
doc/: RELEASING.md
examples/: basic.rs
refs/: README.md  download.sh
scripts/: generate_references.py
src/: airy.rs  besh.rs  besi.rs  besj.rs  besk.rs  besy.rs  lib.rs  machine.rs  types.rs  utils.rs
src/algo/: acai.rs  acon.rs  asyi.rs  binu.rs  bknu.rs  buni.rs  bunk.rs  constants.rs  gamln.rs  kscl.rs  mlri.rs  mod.rs  rati.rs  s1s2.rs  seri.rs  shch.rs  uchk.rs  unhj.rs  uni1.rs  uni2.rs  unik.rs  unk1.rs  unk2.rs  uoik.rs  wrsk.rs
tests/: negative_order.rs  phase2_milestone.rs  phase3_milestone.rs  phase4_milestone.rs  phase5b_milestone.rs  phase6_milestone.rs
tests/fortran/: Makefile  gen_airy_refs.f  gen_besh_refs.f  gen_besi_refs.f  gen_besj_refs.f  gen_besk_refs.f  gen_besy_refs.f  gen_phase5b_refs.f  machcon_ieee.f  txt_to_json.py
tests/reference_values/: airy_f64.json  besh_f64.json  besi_f64.json  besj_f64.json  besk_f64.json  besy_f64.json  phase5b_f64.json
