[package]
name = "complex-bessel"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Pure Rust implementation of complex Bessel functions (J, Y, I, K, H, Airy) based on Amos Algorithm 644"
license = "MIT OR Apache-2.0"
keywords = ["bessel", "complex", "special-functions", "mathematics", "no-std"]
categories = ["mathematics", "science", "no-std"]
readme = "README.md"
repository = "https://github.com/elgar328/complex-bessel"

[dependencies]
num-complex = { version = "0.4", default-features = false, features = ["libm"] }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }

[features]
default = ["std"]
std = ["alloc", "num-complex/std", "num-traits/std"]
alloc = []

[[example]]
name = "basic"
required-features = ["alloc"]

